first attempt: changed images src and fix little bugs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="page">
 		<header class="header">
-			<img src="/images/header-logo.svg" alt="Россия">
+			<img src="./images/header-logo.svg" alt="Россия">
 			<div>
 				<a href="#" class="header__link header__link_status_selected">Ru</a>
 				<a href="#" class="header__link links-hover">En</a>
@@ -19,7 +19,7 @@
 		<section class="lead">
 			<h1 class="lead__title">Путешествия по России</h1>
 			<p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-			<img src="/images/kalegin-michail-179870-unsplash.jpg" alt="Полка" class="lead__image">
+			<img src="./images/kalegin-michail-179870-unsplash.jpg" alt="Полка" class="lead__image">
 			<p class="lead__caption">ваша полка — верхняя</p>
 		</section>
 		<section class="intro">
@@ -57,18 +57,18 @@
 			</ul>
 		</section>
 		<section class="photo-grid">
-			<img src="/images/train.jpg" alt="Поезд" class="photo-grid__item">
-			<img src="/images/atharva-tulsi-472908-unsplash.jpg" alt="Горы" class="photo-grid__item">
-			<img src="/images/tuman.jpg" alt="Туман" class="photo-grid__item">
-			<img src="/images/sochi.jpg" alt="Сочи" class="photo-grid__item">
-			<img src="/images/arisa-chattasa-559627-unsplash.jpg" alt="Лед" class="photo-grid__item">
-			<img src="/images/baikal.jpg" alt="Байкал" class="photo-grid__item">
-			<img src="/images/elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
-			<img src="/images/stanislav-kondratiev-459423-unsplash.jpg" alt="Перевал Кондратьева" class="photo-grid__item">
-			<img src="/images/kamchatka.jpg" alt="Камчатка" class="photo-grid__item">
-			<img src="/images/kamchatka2.jpg" alt="Камчатка тоже" class="photo-grid__item">
-			<img src="/images/baikal2.jpg" alt="Байкал тоже" class="photo-grid__item">
-			<img src="/images/ergaki.jpg" alt="Ергаки" class="photo-grid__item">
+			<img src="./images/train.jpg" alt="Поезд" class="photo-grid__item">
+			<img src="./images/atharva-tulsi-472908-unsplash.jpg" alt="Горы" class="photo-grid__item">
+			<img src="./images/tuman.jpg" alt="Туман" class="photo-grid__item">
+			<img src="./images/sochi.jpg" alt="Сочи" class="photo-grid__item">
+			<img src="./images/arisa-chattasa-559627-unsplash.jpg" alt="Лед" class="photo-grid__item">
+			<img src="./images/baikal.jpg" alt="Байкал" class="photo-grid__item">
+			<img src="./images/elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
+			<img src="./images/stanislav-kondratiev-459423-unsplash.jpg" alt="Перевал Кондратьева" class="photo-grid__item">
+			<img src="./images/kamchatka.jpg" alt="Камчатка" class="photo-grid__item">
+			<img src="./images/kamchatka2.jpg" alt="Камчатка тоже" class="photo-grid__item">
+			<img src="./images/baikal2.jpg" alt="Байкал тоже" class="photo-grid__item">
+			<img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__item">
 		</section>
 		<section class="places">
 			<div class="place">
@@ -77,7 +77,7 @@
 					<h3 class="place__url-heading">URL</h3>
 					<a href="http://park-kosa.ru" target="_blank" class="place__link links-hover">park-kosa.ru</a>
 				</div>
-				<img src="/images/nikita-tikhomirov-1153188-unsplash.jpg" alt="Куршская коса" class="place__image">
+				<img src="./images/nikita-tikhomirov-1153188-unsplash.jpg" alt="Куршская коса" class="place__image">
 				<div>
 					<p class="place__paragraph">
 						Здесь, посреди лесов и песчаных дюн, 
@@ -100,7 +100,7 @@
 					<h3 class="place__url-heading">URL</h3>
 					<a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link links-hover">National Geographic</a>
 				</div>
-				<img src="/images/m-r-760504-unsplash.jpg" alt="Кольский" class="place__image">
+				<img src="./images/m-r-760504-unsplash.jpg" alt="Кольский" class="place__image">
 				<div>
 					<p class="place__paragraph">
 						Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -121,7 +121,7 @@
 					<h3 class="place__url-heading">URL</h3>
 					<a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank" class="place__link links-hover">YouTube</a>
 				</div>
-				<img src="/images/nail-gilfanov-527808-unsplash.jpg" alt="Алтай" class="place__image">
+				<img src="./images/nail-gilfanov-527808-unsplash.jpg" alt="Алтай" class="place__image">
 				<div>
 					<p class="place__paragraph">
 						Алтай — одно из красивейших мест в России. 
@@ -144,7 +144,7 @@
 					<h3 class="place__url-heading">URL</h3>
 					<a href="https://vk.com/baikalmile" target="_blank" class="place__link links-hover">https://vk.com/baikalmile</a>
 				</div>
-				<img src="/images/sergey-pesterev-1156037-unsplash.jpg" alt="Зимний Байкал" class="place__image">
+				<img src="./images/sergey-pesterev-1156037-unsplash.jpg" alt="Зимний Байкал" class="place__image">
 				<div>
 					<p class="place__paragraph">
 						Всем известен Байкал как крупнейшее озеро в мире. 
@@ -165,7 +165,7 @@
 					<h3 class="place__url-heading">URL</h3>
 					<a href="http://vodlozero.ru" target="_blank" class="place__link links-hover">http://vodlozero.ru/</a>
 				</div>
-				<img src="/images/vladimir-fedotov-652306-unsplash.jpg" alt="Карелия" class="place__image">
+				<img src="./images/vladimir-fedotov-652306-unsplash.jpg" alt="Карелия" class="place__image">
 				<div>
 					<p class="place__paragraph">
 						Сибирь заканчивается не на Урале, 
