third attempr: changed the style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header class="header">
 			<img src="./images/header-logo.svg" class="header__logo" alt="Россия">
 			<div>
-				<a href="#" class="header__link header__current-lang">Ru</a>
+				<a href="#" class="header__link header__link_current">Ru</a>
 				<a href="#" class="header__link links-hover">En</a>
 			</div>
 		</header>
